2016-02-29  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* GNUmakefile (MINGW_HAVE_SECURE_API): Moved to config.h. Undefined
	for __MINGW32__; remove (make optional) forcing a specific C std.
	* implement.h (uint64_t): Define for Visual Studio.

2016-02-29	Keith Marshall <keithmarshall at users dot sourceforge dot net>

	* ptw32_timespec.c: Fix C90 warnings from GCC; int64_t -> uint64_t

2016-02-18	Carey Gister <>

	* dll.c (DllMain): Should not be defined for static library builds.
	Doing so prevents static linking with a dll library.

2015-11-01	Anurag Sharma <anurags at fb dot com>

	* ptw32_MCS_lock.c: Fix a race condition causing crashes.
	This race condition was also analysed and reported with a slightly
	different fix independently by Jonathan Brown at VMware.

2015-11-01	Mark Smith <masmith at fb dot com>

	* ptw32_relnillisecs.c: Fix erroneous 0-time waits, symptomizing as
	busy-spinning eating CPU. When the time to wait is specified to be less
	than 1 millisecond were erroneously rounded down to 0; Modify WinCE
	dependency.
	* ptw32_timespec.c: Remove NEED_FTIME conditionality.

2015-06-31  Dimitry <>

	* sem_init.c: Remove double free() when NEED_SEM defined (for
	early versions of WinCE).

2014-05-29  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* autostatic.c: Move content to dll.c so autostatic no longer required.
	* dll.c: Include content from autostatic.c.
	* pthread.c (autostatic.c): Remove #include.
	* common.mk (autostatic.*): remove from builds.
	* Makefile (realclean): delete make.log.txt if present.
	* GNUMakefile (realclean): Likewise.

2014-05-28  Jaeeun Choi <jaeeun at mdstec dot com>

	* pthread_mutex_init.c: Check and free malloced robustNode element if
	init is returning an ENOSPC error.

2013-12-10  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* Makefile (*-small-static): Removed all small-static targets in the MS
	toolchain builds due to	failures of TLS in apps linked with these